--- a/src/config/jdbc.properties
+++ b/src/config/jdbc.properties
@@ -17,5 +17,5 @@
 #Thu Jan 10 23:34:35 CST 2013
 jdbc.url=jdbc\:mysql\://localhost\:3306/javashop?useUnicode\=true&characterEncoding\=utf8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=admin
 jdbc.driverClassName=com.mysql.jdbc.Driver
