--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,68 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" version="2.4">
-  <javaee:display-name>javamall</javaee:display-name>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+    version="2.4">
+   <display-name>javamall</display-name>
   <context-param>
-    <javaee:param-name>contextConfigLocation</javaee:param-name>
-    <javaee:param-value>classpath*:spring/*.xml</javaee:param-value>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath*:spring/*.xml</param-value>
   </context-param>
   <listener>
-    <javaee:listener-class>
+    <listener-class>
 			org.springframework.web.context.ContextLoaderListener
-		</javaee:listener-class>
+		</listener-class>
   </listener>
   <listener>
-    <javaee:listener-class>
+    <listener-class>
 			org.springframework.web.util.IntrospectorCleanupListener
-		</javaee:listener-class>
+		</listener-class>
   </listener>
   <listener>
-    <javaee:listener-class>
+    <listener-class>
 			com.enation.eop.sdk.listener.EopSessionListener
-	</javaee:listener-class>
-  </listener>
+	</listener-class>
+  </listener>  
   <listener>
-    <javaee:listener-class>
+    <listener-class>
 			com.enation.eop.sdk.listener.EopContextLoaderListener
-	</javaee:listener-class>
-  </listener>
+	</listener-class>
+  </listener>  
+    
   <filter>
     <filter-name>Compress</filter-name>
     <filter-class>com.enation.framework.gzip.GZIPFilter</filter-class>
-  </filter>
-  <filter-mapping>
+</filter>
+<filter-mapping>
     <filter-name>Compress</filter-name>
     <url-pattern>*.jsp</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
+</filter-mapping>
+<filter-mapping>
     <filter-name>Compress</filter-name>
     <url-pattern>*.do</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
+</filter-mapping> 
+<filter-mapping>
     <filter-name>Compress</filter-name>
     <url-pattern>*.html</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
+</filter-mapping>
+    <filter-mapping>
     <filter-name>Compress</filter-name>
     <url-pattern>*.js</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
+</filter-mapping>
+<filter-mapping>
     <filter-name>Compress</filter-name>
     <url-pattern>*.css</url-pattern>
-  </filter-mapping>
+</filter-mapping>
+
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>
 			org.springframework.web.filter.CharacterEncodingFilter
 		</filter-class>
     <init-param>
-      <javaee:param-name>encoding</javaee:param-name>
-      <javaee:param-value>UTF-8</javaee:param-value>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
     </init-param>
   </filter>
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
   <filter>
     <filter-name>dispatcherFilter</filter-name>
     <filter-class>
@@ -73,34 +79,37 @@
     <filter-name>dispatcherFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <filter id="filterdispatcher">
-    <filter-name>Struts2</filter-name>
-    <filter-class>
+
+<filter id="filterdispatcher">
+		<filter-name>Struts2</filter-name>
+		<filter-class>
 			org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
 		</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>Struts2</filter-name>
-    <url-pattern>*.do</url-pattern>
-    <dispatcher>REQUEST</dispatcher>
-    <dispatcher>FORWARD</dispatcher>
-    <dispatcher>INCLUDE</dispatcher>
-  </filter-mapping>
-  <servlet>
-    <servlet-name>ValidCodeServlet</servlet-name>
-    <servlet-class>
+	</filter>
+	<filter-mapping> 
+		<filter-name>Struts2</filter-name>
+		<url-pattern>*.do</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>	
+        <dispatcher>INCLUDE</dispatcher>		
+</filter-mapping>
+
+
+	<servlet>
+		<servlet-name>ValidCodeServlet</servlet-name>
+		<servlet-class>
 			com.enation.eop.sdk.utils.ValidCodeServlet
 		</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ValidCodeServlet</servlet-name>
-    <url-pattern>/validcode.do</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>JspSupportServlet</servlet-name>
-    <servlet-class>org.apache.struts2.views.JspSupportServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ValidCodeServlet</servlet-name>
+		<url-pattern>/validcode.do</url-pattern>
+	</servlet-mapping>
+	<servlet>
+  <servlet-name>JspSupportServlet</servlet-name>   
+    <servlet-class>org.apache.struts2.views.JspSupportServlet</servlet-class>   
+    <load-on-startup>1</load-on-startup>   
+</servlet> 
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -109,4 +118,5 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
 </web-app>
